force-app/main/default/objects/Volunteer_Shift_Report__c/Volunteer_Shift_Report__c.object-meta.xml
<CustomObject>
    <label>Volunteer Shift Report</label>
    <nameField>
        <displayFormat>VR-{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Volunteer Shift Reports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>