force-app/main/default/objects/Volunteer_Shift_Report__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Partner organization submitting the report</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Volunteer Shift Reports</relationshipLabel>
    <relationshipName>Volunteer_Shift_Reports</relationshipName>
    <type>Lookup</type>
</CustomField>