force-app/main/default/objects/Volunteer_Shift_Report__c/fields/Campaign__c.field-meta.xml
<CustomField>
    <fullName>Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The partner-specific campaign for the disaster</description>
    <label>Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Volunteer Shift Reports</relationshipLabel>
    <relationshipName>Volunteer_Shift_Reports</relationshipName>
    <type>Lookup</type>
</CustomField>