force-app/main/default/objects/Volunteer_Shift_Report__c/fields/Disaster_Event__c.field-meta.xml
<CustomField>
    <fullName>Disaster_Event__c</fullName>
    <label>Disaster Event</label>
    <length>255</length>
    <type>Text</type>
</CustomField>