force-app/main/default/objects/Volunteer_Shift_Report__c/fields/Parent_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Parent_Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Disaster-level parent campaign</description>
    <label>Parent Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Volunteer Shift Reports (Parent Campaign)</relationshipLabel>
    <relationshipName>Volunteer_Shift_Reports1</relationshipName>
    <type>Lookup</type>
</CustomField>