force-app/main/default/objects/Volunteer_Shift_Report__c/fields/Records_Count__c.field-meta.xml
<CustomField>
    <fullName>Records_Count__c</fullName>
    <label>Records Count</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>