force-app/main/default/objects/Volunteer_Shift_Report__c/fields/Submitted_By__c.field-meta.xml
<CustomField>
    <fullName>Submitted_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Partner user who uploaded the report</description>
    <label>Submitted By</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Volunteer Shift Reports</relationshipLabel>
    <relationshipName>Volunteer_Shift_Reports</relationshipName>
    <type>Lookup</type>
</CustomField>