force-app/main/default/objects/Volunteer_Shift_Report__c/fields/Submitter_Initials__c.field-meta.xml
<CustomField>
    <fullName>Submitter_Initials__c</fullName>
    <description>The initials of the individual submitting the shift report (e.g., &quot;TJ&quot; for Tejesh Morla). Optional but helps with soft authentication and audit.</description>
    <label>Submitter Initials</label>
    <length>255</length>
    <type>Text</type>
</CustomField>