force-app/main/default/objects/Volunteer_Shift_Report__c/fields/Total_Attendance__c.field-meta.xml
<CustomField>
    <fullName>Total_Attendance__c</fullName>
    <description>Total Number of Volunteer Attendance for the Report Submitted</description>
    <inlineHelpText>Total Number of Volunteer Attendance for the Report Submitted</inlineHelpText>
    <label>Total Attendance</label>
    <summarizedField>Volunteer_Shift_Attendance__c.Attendees__c</summarizedField>
    <summaryForeignKey>Volunteer_Shift_Attendance__c.Volunteer_Shift_Report__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>