force-app/main/default/objects/Volunteer_Shift_Report__c/fields/Total_Hours__c.field-meta.xml
<CustomField>
    <fullName>Total_Hours__c</fullName>
    <description>Sum of Total Hours from all child attendance records</description>
    <label>Total Hours</label>
    <summarizedField>Volunteer_Shift_Attendance__c.Total_Hours__c</summarizedField>
    <summaryForeignKey>Volunteer_Shift_Attendance__c.Volunteer_Shift_Report__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>