force-app/main/default/objects/Volunteer_Shift_Report__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Campaign__c</columns>
    <columns>Total_Attendance__c</columns>
    <columns>Total_Hours__c</columns>
    <columns>Submission_Date__c</columns>
    <columns>Submitted_By__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>