force-app/main/default/objects/Volunteer_Shift_Report__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>NAME</columns>
    <columns>Campaign__c</columns>
    <columns>Account__c</columns>
    <columns>Parent_Campaign__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Total_Hours__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Account__c</field>
        <operation>contains</operation>
        <value>chesterfield</value>
    </filters>
    <label>All</label>
</ListView>